--- a/notebooks/predictions2.ipynb
+++ b/notebooks/predictions2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CH585\\\\Documents\\\\T6'"
+       "'c:\\\\Users\\\\CH585'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
     "    print(final_df.groupby('symbol').size())\n",
     "    \n",
     "    # Save to CSV if needed\n",
-    "    final_df.to_csv('14day_crypto_sequences_custom.csv', index=False)\n",
+    "    final_df.to_csv(project_root/ '14day_new_crypto_sequences_custom.csv', index=False)\n",
     "    print(f\"\\nSuccessfully processed {len(selected_sequences)} out of {len(selected_tickers)} tickers\")\n",
     "else:\n",
     "    print(\"No valid sequences found for the selected tickers and date\")"
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
     "    normalizer.fit(train_dataset)\n",
     "\n",
     "    # Load your input DataFrame (14-day windows for top 20 cryptos)\n",
-    "    df = pd.read_csv( project_root / \"14day_crypto_sequences.csv\")\n",
+    "    df = pd.read_csv( project_root /'14day_new_crypto_sequences_custom.csv')\n",
     "    df['date'] = pd.to_datetime(df['date'])\n",
     "    df = df.sort_values(['symbol', 'date'])\n",
     "    \n",
@@ -359,56 +359,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          date     symbol     close  next_close  transformer_pred  \\\n",
-      "223 2022-04-06  ALGO/USDT   0.76610     0.07738         -3.402411   \n",
-      "181 2022-04-06  ANKR/USDT   0.07738     0.21540         -3.641147   \n",
-      "265 2022-04-06  ARDR/USDT   0.21540     0.49450         -3.384016   \n",
-      "41  2022-04-06   CHR/USDT   0.49450     0.27320         -3.575358   \n",
-      "83  2022-04-06  CTXC/USDT   0.27320     0.07859         -3.526537   \n",
-      "195 2022-04-06  DATA/USDT   0.07859    58.70000         -3.677750   \n",
-      "167 2022-04-06   DCR/USDT  58.70000     1.08800         -2.926291   \n",
-      "237 2022-04-06   EUR/USDT   1.08800     0.73600         -3.337081   \n",
-      "251 2022-04-06  IOTA/USDT   0.73600     0.96680         -3.359458   \n",
-      "13  2022-04-06   LRC/USDT   0.96680     0.05448         -3.539123   \n",
-      "209 2022-04-06   MDT/USDT   0.05448     0.23410         -3.630283   \n",
-      "69  2022-04-06   NKN/USDT   0.23410     0.05914         -3.453273   \n",
-      "55  2022-04-06   RVN/USDT   0.05914     5.38400         -3.891538   \n",
-      "279 2022-04-06   SNX/USDT   5.38400     0.09623         -3.064423   \n",
-      "125 2022-04-06  STPT/USDT   0.09623     1.25800         -3.393280   \n",
-      "139 2022-04-06   STX/USDT   1.25800     0.99990         -3.372596   \n",
-      "97  2022-04-06  USDC/USDT   0.99990     0.20310         -3.451716   \n",
-      "111 2022-04-06   XLM/USDT   0.20310     0.75950         -3.525788   \n",
-      "27  2022-04-06   XRP/USDT   0.75950    41.30000         -3.484027   \n",
-      "153 2022-04-06   ZEN/USDT  41.30000         NaN         -3.024556   \n",
+      "           date     symbol       close  next_close  transformer_pred  \\\n",
+      "13   2025-03-24   ADA/USDT     0.73200     0.20360         -8.037679   \n",
+      "27   2025-03-24  ALGO/USDT     0.20360     0.02058         -6.783334   \n",
+      "41   2025-03-24  ANKR/USDT     0.02058     0.06380         -8.259130   \n",
+      "55   2025-03-24  ARDR/USDT     0.06380     0.02994         -6.551928   \n",
+      "69   2025-03-24  ARPA/USDT     0.02994     4.95600         -7.115588   \n",
+      "...         ...        ...         ...         ...               ...   \n",
+      "1343 2025-03-24   YFI/USDT  5416.00000    32.44000       3040.845947   \n",
+      "1357 2025-03-24   ZEC/USDT    32.44000     9.67000         -5.993320   \n",
+      "1371 2025-03-24   ZEN/USDT     9.67000     0.01296         -6.404458   \n",
+      "1385 2025-03-24   ZIL/USDT     0.01296     0.29140         -7.215162   \n",
+      "1399 2025-03-24   ZRX/USDT     0.29140         NaN         -6.636563   \n",
       "\n",
-      "     informer_pred  percentage_increase  proportion  percent_of_coins  \n",
-      "223     106.787575         13839.116926    0.013706               1.0  \n",
-      "181      96.706627        124876.255999    0.123671              12.0  \n",
-      "265     109.913879         50927.799162    0.050436               5.0  \n",
-      "41      105.676331         21270.339852    0.021065               2.0  \n",
-      "83      107.894897         39393.007855    0.039013               4.0  \n",
-      "195     106.390289        135273.825304    0.133968              13.0  \n",
-      "167     117.530792           100.222815    0.000099               0.0  \n",
-      "237     106.707726          9707.695361    0.009614               1.0  \n",
-      "251     108.668503         14664.742229    0.014523               1.0  \n",
-      "13      101.761292         10425.578352    0.010325               1.0  \n",
-      "209     100.901535        185108.397640    0.183322              20.0  \n",
-      "69      108.542343         46265.802281    0.045819               5.0  \n",
-      "55       95.591888        161536.605390    0.159978              16.0  \n",
-      "279     109.453766          1932.945131    0.001914               0.0  \n",
-      "125     108.687523        112845.570912    0.111757              11.0  \n",
-      "139     109.984894          8642.837345    0.008559               1.0  \n",
-      "97       99.407593          9841.753453    0.009747               1.0  \n",
-      "111     102.389473         50313.329868    0.049828               5.0  \n",
-      "27       96.446663         12598.704793    0.012477               1.0  \n",
-      "153     115.729004           180.215506    0.000178               0.0  \n"
+      "      informer_pred  \n",
+      "13         9.188528  \n",
+      "27         6.038890  \n",
+      "41         7.980579  \n",
+      "55         5.727973  \n",
+      "69         6.122960  \n",
+      "...             ...  \n",
+      "1343    4734.952148  \n",
+      "1357       6.034493  \n",
+      "1371       5.809328  \n",
+      "1385       6.771086  \n",
+      "1399       5.717358  \n",
+      "\n",
+      "[100 rows x 6 columns]\n"
      ]
     }
    ],
@@ -418,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,56 +411,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          date     symbol     close  next_close  transformer_pred  \\\n",
-      "223 2022-04-06  ALGO/USDT   0.76610     0.07738         -3.402411   \n",
-      "181 2022-04-06  ANKR/USDT   0.07738     0.21540         -3.641147   \n",
-      "265 2022-04-06  ARDR/USDT   0.21540     0.49450         -3.384016   \n",
-      "41  2022-04-06   CHR/USDT   0.49450     0.27320         -3.575358   \n",
-      "83  2022-04-06  CTXC/USDT   0.27320     0.07859         -3.526537   \n",
-      "195 2022-04-06  DATA/USDT   0.07859    58.70000         -3.677750   \n",
-      "167 2022-04-06   DCR/USDT  58.70000     1.08800         -2.926291   \n",
-      "237 2022-04-06   EUR/USDT   1.08800     0.73600         -3.337081   \n",
-      "251 2022-04-06  IOTA/USDT   0.73600     0.96680         -3.359458   \n",
-      "13  2022-04-06   LRC/USDT   0.96680     0.05448         -3.539123   \n",
-      "209 2022-04-06   MDT/USDT   0.05448     0.23410         -3.630283   \n",
-      "69  2022-04-06   NKN/USDT   0.23410     0.05914         -3.453273   \n",
-      "55  2022-04-06   RVN/USDT   0.05914     5.38400         -3.891538   \n",
-      "279 2022-04-06   SNX/USDT   5.38400     0.09623         -3.064423   \n",
-      "125 2022-04-06  STPT/USDT   0.09623     1.25800         -3.393280   \n",
-      "139 2022-04-06   STX/USDT   1.25800     0.99990         -3.372596   \n",
-      "97  2022-04-06  USDC/USDT   0.99990     0.20310         -3.451716   \n",
-      "111 2022-04-06   XLM/USDT   0.20310     0.75950         -3.525788   \n",
-      "27  2022-04-06   XRP/USDT   0.75950    41.30000         -3.484027   \n",
-      "153 2022-04-06   ZEN/USDT  41.30000         NaN         -3.024556   \n",
+      "           date     symbol       close  next_close  transformer_pred  \\\n",
+      "13   2025-03-24   ADA/USDT     0.73200     0.20360         -8.037679   \n",
+      "27   2025-03-24  ALGO/USDT     0.20360     0.02058         -6.783334   \n",
+      "41   2025-03-24  ANKR/USDT     0.02058     0.06380         -8.259130   \n",
+      "55   2025-03-24  ARDR/USDT     0.06380     0.02994         -6.551928   \n",
+      "69   2025-03-24  ARPA/USDT     0.02994     4.95600         -7.115588   \n",
+      "...         ...        ...         ...         ...               ...   \n",
+      "1343 2025-03-24   YFI/USDT  5416.00000    32.44000       3040.845947   \n",
+      "1357 2025-03-24   ZEC/USDT    32.44000     9.67000         -5.993320   \n",
+      "1371 2025-03-24   ZEN/USDT     9.67000     0.01296         -6.404458   \n",
+      "1385 2025-03-24   ZIL/USDT     0.01296     0.29140         -7.215162   \n",
+      "1399 2025-03-24   ZRX/USDT     0.29140         NaN         -6.636563   \n",
       "\n",
-      "     informer_pred  percentage_increase  \n",
-      "223     106.787575         13839.116926  \n",
-      "181      96.706627        124876.255999  \n",
-      "265     109.913879         50927.799162  \n",
-      "41      105.676331         21270.339852  \n",
-      "83      107.894897         39393.007855  \n",
-      "195     106.390289        135273.825304  \n",
-      "167     117.530792           100.222815  \n",
-      "237     106.707726          9707.695361  \n",
-      "251     108.668503         14664.742229  \n",
-      "13      101.761292         10425.578352  \n",
-      "209     100.901535        185108.397640  \n",
-      "69      108.542343         46265.802281  \n",
-      "55       95.591888        161536.605390  \n",
-      "279     109.453766          1932.945131  \n",
-      "125     108.687523        112845.570912  \n",
-      "139     109.984894          8642.837345  \n",
-      "97       99.407593          9841.753453  \n",
-      "111     102.389473         50313.329868  \n",
-      "27       96.446663         12598.704793  \n",
-      "153     115.729004           180.215506  \n"
+      "      informer_pred  percentage_increase  \n",
+      "13         9.188528          1155.263396  \n",
+      "27         6.038890          2866.056170  \n",
+      "41         7.980579         38678.323126  \n",
+      "55         5.727973          8878.013335  \n",
+      "69         6.122960         20350.766913  \n",
+      "...             ...                  ...  \n",
+      "1343    4734.952148           -12.574739  \n",
+      "1357       6.034493           -81.397987  \n",
+      "1371       5.809328           -39.924223  \n",
+      "1385       6.771086         52146.035617  \n",
+      "1399       5.717358          1862.030760  \n",
+      "\n",
+      "[100 rows x 7 columns]\n"
      ]
     }
    ],
@@ -486,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -531,56 +499,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          date     symbol     close  next_close  transformer_pred  \\\n",
-      "223 2022-04-06  ALGO/USDT   0.76610     0.07738         -3.402411   \n",
-      "181 2022-04-06  ANKR/USDT   0.07738     0.21540         -3.641147   \n",
-      "265 2022-04-06  ARDR/USDT   0.21540     0.49450         -3.384016   \n",
-      "41  2022-04-06   CHR/USDT   0.49450     0.27320         -3.575358   \n",
-      "83  2022-04-06  CTXC/USDT   0.27320     0.07859         -3.526537   \n",
-      "195 2022-04-06  DATA/USDT   0.07859    58.70000         -3.677750   \n",
-      "167 2022-04-06   DCR/USDT  58.70000     1.08800         -2.926291   \n",
-      "237 2022-04-06   EUR/USDT   1.08800     0.73600         -3.337081   \n",
-      "251 2022-04-06  IOTA/USDT   0.73600     0.96680         -3.359458   \n",
-      "13  2022-04-06   LRC/USDT   0.96680     0.05448         -3.539123   \n",
-      "209 2022-04-06   MDT/USDT   0.05448     0.23410         -3.630283   \n",
-      "69  2022-04-06   NKN/USDT   0.23410     0.05914         -3.453273   \n",
-      "55  2022-04-06   RVN/USDT   0.05914     5.38400         -3.891538   \n",
-      "279 2022-04-06   SNX/USDT   5.38400     0.09623         -3.064423   \n",
-      "125 2022-04-06  STPT/USDT   0.09623     1.25800         -3.393280   \n",
-      "139 2022-04-06   STX/USDT   1.25800     0.99990         -3.372596   \n",
-      "97  2022-04-06  USDC/USDT   0.99990     0.20310         -3.451716   \n",
-      "111 2022-04-06   XLM/USDT   0.20310     0.75950         -3.525788   \n",
-      "27  2022-04-06   XRP/USDT   0.75950    41.30000         -3.484027   \n",
-      "153 2022-04-06   ZEN/USDT  41.30000         NaN         -3.024556   \n",
+      "           date     symbol       close  next_close  transformer_pred  \\\n",
+      "13   2025-03-24   ADA/USDT     0.73200     0.20360         -8.037679   \n",
+      "27   2025-03-24  ALGO/USDT     0.20360     0.02058         -6.783334   \n",
+      "41   2025-03-24  ANKR/USDT     0.02058     0.06380         -8.259130   \n",
+      "55   2025-03-24  ARDR/USDT     0.06380     0.02994         -6.551928   \n",
+      "69   2025-03-24  ARPA/USDT     0.02994     4.95600         -7.115588   \n",
+      "...         ...        ...         ...         ...               ...   \n",
+      "1343 2025-03-24   YFI/USDT  5416.00000    32.44000       3040.845947   \n",
+      "1357 2025-03-24   ZEC/USDT    32.44000     9.67000         -5.993320   \n",
+      "1371 2025-03-24   ZEN/USDT     9.67000     0.01296         -6.404458   \n",
+      "1385 2025-03-24   ZIL/USDT     0.01296     0.29140         -7.215162   \n",
+      "1399 2025-03-24   ZRX/USDT     0.29140         NaN         -6.636563   \n",
       "\n",
-      "     informer_pred  percentage_increase  proportion  percent_of_coins  \n",
-      "223     106.787575         13839.116926    0.013706               1.0  \n",
-      "181      96.706627        124876.255999    0.123671              12.0  \n",
-      "265     109.913879         50927.799162    0.050436               5.0  \n",
-      "41      105.676331         21270.339852    0.021065               2.0  \n",
-      "83      107.894897         39393.007855    0.039013               4.0  \n",
-      "195     106.390289        135273.825304    0.133968              13.0  \n",
-      "167     117.530792           100.222815    0.000099               0.0  \n",
-      "237     106.707726          9707.695361    0.009614               1.0  \n",
-      "251     108.668503         14664.742229    0.014523               1.0  \n",
-      "13      101.761292         10425.578352    0.010325               1.0  \n",
-      "209     100.901535        185108.397640    0.183322              20.0  \n",
-      "69      108.542343         46265.802281    0.045819               5.0  \n",
-      "55       95.591888        161536.605390    0.159978              16.0  \n",
-      "279     109.453766          1932.945131    0.001914               0.0  \n",
-      "125     108.687523        112845.570912    0.111757              11.0  \n",
-      "139     109.984894          8642.837345    0.008559               1.0  \n",
-      "97       99.407593          9841.753453    0.009747               1.0  \n",
-      "111     102.389473         50313.329868    0.049828               5.0  \n",
-      "27       96.446663         12598.704793    0.012477               1.0  \n",
-      "153     115.729004           180.215506    0.000178               0.0  \n"
+      "      informer_pred  percentage_increase    proportion  percent_of_coins  \n",
+      "13         9.188528          1155.263396  2.282873e-05               0.0  \n",
+      "27         6.038890          2866.056170  5.663506e-05               0.0  \n",
+      "41         7.980579         38678.323126  7.643078e-04               0.0  \n",
+      "55         5.727973          8878.013335  1.754351e-04               0.0  \n",
+      "69         6.122960         20350.766913  4.021439e-04               0.0  \n",
+      "...             ...                  ...           ...               ...  \n",
+      "1343    4734.952148           -12.574739 -2.484847e-07              -0.0  \n",
+      "1357       6.034493           -81.397987 -1.608475e-06              -0.0  \n",
+      "1371       5.809328           -39.924223 -7.889276e-07              -0.0  \n",
+      "1385       6.771086         52146.035617  1.030438e-03               0.0  \n",
+      "1399       5.717358          1862.030760  3.679489e-05               0.0  \n",
+      "\n",
+      "[100 rows x 9 columns]\n"
      ]
     }
    ],
