Fixed temporal leakage

--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -968,7 +968,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ryan Lee\\AppData\\Local\\Temp\\ipykernel_14524\\963842659.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\Ryan Lee\\AppData\\Local\\Temp\\ipykernel_28380\\963842659.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  gold[\"date\"] = pd.to_datetime(gold[\"date\"], dayfirst=True)\n"
      ]
     },
@@ -1051,8 +1051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## X. Combine\n",
-    "WIP"
+    "## 7. Combine"
    ]
   },
   {
@@ -1083,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1483,12 +1482,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save combined dataset\n",
-    "combined.to_csv(\"data/processed/combined_dataset_v1.csv\")"
+    "csv_path = \"data/processed/combined_dataset_v1.csv\"\n",
+    "combined.to_csv(csv_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Train-Validation-Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>market_cap</th>\n",
+       "      <th>daily_return</th>\n",
+       "      <th>sp500</th>\n",
+       "      <th>treasury_spread</th>\n",
+       "      <th>fear_greed</th>\n",
+       "      <th>gold_price_usd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-03-24</td>\n",
+       "      <td>ADA/USDT</td>\n",
+       "      <td>1.108</td>\n",
+       "      <td>1.190</td>\n",
+       "      <td>1.076</td>\n",
+       "      <td>1.131</td>\n",
+       "      <td>390982460.0</td>\n",
+       "      <td>4.422012e+08</td>\n",
+       "      <td>-0.030946</td>\n",
+       "      <td>4520.16</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>1856.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-03-25</td>\n",
+       "      <td>ADA/USDT</td>\n",
+       "      <td>1.130</td>\n",
+       "      <td>1.167</td>\n",
+       "      <td>1.072</td>\n",
+       "      <td>1.096</td>\n",
+       "      <td>290456883.7</td>\n",
+       "      <td>3.183407e+08</td>\n",
+       "      <td>-0.030946</td>\n",
+       "      <td>4543.06</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>1856.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-03-26</td>\n",
+       "      <td>ADA/USDT</td>\n",
+       "      <td>1.096</td>\n",
+       "      <td>1.160</td>\n",
+       "      <td>1.079</td>\n",
+       "      <td>1.152</td>\n",
+       "      <td>143117986.1</td>\n",
+       "      <td>1.648719e+08</td>\n",
+       "      <td>0.051095</td>\n",
+       "      <td>4543.06</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>1856.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-03-27</td>\n",
+       "      <td>ADA/USDT</td>\n",
+       "      <td>1.152</td>\n",
+       "      <td>1.186</td>\n",
+       "      <td>1.104</td>\n",
+       "      <td>1.184</td>\n",
+       "      <td>135043361.8</td>\n",
+       "      <td>1.598913e+08</td>\n",
+       "      <td>0.027778</td>\n",
+       "      <td>4543.06</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>1856.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-03-28</td>\n",
+       "      <td>ADA/USDT</td>\n",
+       "      <td>1.184</td>\n",
+       "      <td>1.246</td>\n",
+       "      <td>1.157</td>\n",
+       "      <td>1.170</td>\n",
+       "      <td>261105698.6</td>\n",
+       "      <td>3.054937e+08</td>\n",
+       "      <td>-0.011824</td>\n",
+       "      <td>4575.52</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>1856.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date    symbol   open   high    low  close       volume  \\\n",
+       "0  2022-03-24  ADA/USDT  1.108  1.190  1.076  1.131  390982460.0   \n",
+       "1  2022-03-25  ADA/USDT  1.130  1.167  1.072  1.096  290456883.7   \n",
+       "2  2022-03-26  ADA/USDT  1.096  1.160  1.079  1.152  143117986.1   \n",
+       "3  2022-03-27  ADA/USDT  1.152  1.186  1.104  1.184  135043361.8   \n",
+       "4  2022-03-28  ADA/USDT  1.184  1.246  1.157  1.170  261105698.6   \n",
+       "\n",
+       "     market_cap  daily_return    sp500  treasury_spread  fear_greed  \\\n",
+       "0  4.422012e+08     -0.030946  4520.16             0.21        40.0   \n",
+       "1  3.183407e+08     -0.030946  4543.06             0.18        47.0   \n",
+       "2  1.648719e+08      0.051095  4543.06             0.18        51.0   \n",
+       "3  1.598913e+08      0.027778  4543.06             0.18        49.0   \n",
+       "4  3.054937e+08     -0.011824  4575.52             0.11        60.0   \n",
+       "\n",
+       "   gold_price_usd  \n",
+       "0          1856.3  \n",
+       "1          1856.3  \n",
+       "2          1856.3  \n",
+       "3          1856.3  \n",
+       "4          1856.3  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Try loading back full dataset csv file\n",
+    "df = pd.read_csv(csv_path)\n",
+    "df.head()\n",
+    "\n",
+    "# This helps set 'date' back to being a column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The full dataset contains data from 2022-03-24 to 2025-03-24 (3 years). \n",
+    "\n",
+    "We will split the dataset into a training, validation, and test sets using chronological cutoffs. Splitting the dataset by chronological cutoffs ensures that the model is always trained on past data and evaluated on future unseen data, which mirrors real-world deployment where future prices are unknown. This method prevents temporal leakage (using future information during training) and provides a realistic estimate of model performance. It also respects the time-dependent nature of financial data, where traditional random splits would break the temporal order and lead to overly optimistic results.\n",
+    "- Training set: 2022-03-24 to 2024-05-31 (about 2 years 2 months)\n",
+    "- Validation set: 2024-06-01 to 2024-11-30 (about 6 months)\n",
+    "- Test set: 2024-12-01 to 2025-03-24 (about 5 months)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_end = '2024-05-31'\n",
+    "val_end = '2024-11-30'\n",
+    "\n",
+    "train_df = df[df['date'] <= train_end]\n",
+    "val_df = df[(df['date'] > train_end) & (df['date'] <= val_end)]\n",
+    "test_df = df[df['date'] > val_end]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save splits\n",
+    "train_df.to_csv(\"data/processed/train_set.csv\")\n",
+    "val_df.to_csv(\"data/processed/val_set.csv\")\n",
+    "test_df.to_csv(\"data/processed/test_set.csv\")"
    ]
   }
  ],
