--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -92,7 +92,8 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\Ryan Lee\\.conda\\envs\\term6\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "WARNING:torchao.kernel.intmm:Warning: Detected no triton, on systems without Triton certain kernels will not work\n"
      ]
     }
    ],
@@ -155,12 +156,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# File paths\n",
+    "TRAIN_PATH = \"data/processed/train_set.csv\"\n",
+    "VAL_PATH = \"data/processed/val_set.csv\"\n",
+    "TEST_PATH = \"data/processed/test_set.csv\"\n",
+    "\n",
     "# Hyperparameters\n",
-    "CSV_PATH = \"data/processed/combined_dataset_v1.csv\"\n",
     "INPUT_SEQUENCE_LENGTH = 14 # Number of timesteps (days) in input sequence\n",
     "DATASET_STRIDE = 1\n",
-    "BATCH_SIZE = 128\n",
-    "TRAIN_VAL_TEST_SPLIT_RATIO = [0.8, 0.1, 0.1]"
+    "BATCH_SIZE = 256"
    ]
   },
   {
@@ -173,19 +177,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of samples (sequences): 107490\n"
+      "Total number of samples (sequences)\n",
+      "Training: 77790\n",
+      "Validation: 16900\n",
+      "Test: 10000\n"
      ]
     }
    ],
    "source": [
-    "# Create Dataset\n",
-    "dataset = CryptoDataset(\n",
-    "    csv_file=CSV_PATH,\n",
+    "# Create Dataset objects\n",
+    "train_dataset = CryptoDataset(\n",
+    "    csv_file=TRAIN_PATH,\n",
+    "    seq_length=INPUT_SEQUENCE_LENGTH,\n",
+    "    stride=DATASET_STRIDE\n",
+    ")\n",
+    "val_dataset = CryptoDataset(\n",
+    "    csv_file=VAL_PATH,\n",
+    "    seq_length=INPUT_SEQUENCE_LENGTH,\n",
+    "    stride=DATASET_STRIDE\n",
+    ")\n",
+    "test_dataset = CryptoDataset(\n",
+    "    csv_file=TEST_PATH,\n",
     "    seq_length=INPUT_SEQUENCE_LENGTH,\n",
     "    stride=DATASET_STRIDE\n",
     ")\n",
     "\n",
-    "print(\"Total number of samples (sequences):\", len(dataset))"
+    "print(\"Total number of samples (sequences)\")\n",
+    "print(\"Training:\", len(train_dataset))\n",
+    "print(\"Validation:\", len(val_dataset))\n",
+    "print(\"Test:\", len(test_dataset))"
    ]
   },
   {
@@ -195,9 +215,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split into train, validation, and test sets\n",
-    "train_dataset, val_dataset, test_dataset = random_split(dataset, TRAIN_VAL_TEST_SPLIT_RATIO)\n",
-    "\n",
     "# Create respective data loaders\n",
     "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
@@ -513,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
